Fixed text vertical alignment for FF

--- a/src/scss/scheme.scss
+++ b/src/scss/scheme.scss
@@ -508,6 +508,7 @@ svg {
             line-height: 16px;
             fill: #fff;
             text-align: center;
+            dominant-baseline: central;
             alignment-baseline: central;
             text-anchor: middle;
         }
